--- a/iThunderLX/iThunderLiXian/TasksView.xib
+++ b/iThunderLX/iThunderLiXian/TasksView.xib
@@ -56,6 +56,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{6, 442}, {82, 32}}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="29490677"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -92,6 +93,7 @@
 						</set>
 						<string key="NSFrame">{{100, 449}, {18, 19}}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="801951197"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="NSEnabled">YES</bool>
@@ -112,6 +114,7 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{136, 451}, {714, 17}}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:1535</string>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="265811359">
@@ -150,6 +153,7 @@
 										<int key="NSvFlags">274</int>
 										<string key="NSFrameSize">{813, 468}</string>
 										<reference key="NSSuperview" ref="616714804"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="188198480"/>
 										<string key="NSReuseIdentifierKey">_NS:80</string>
 										<string key="NSMinGridSize">{0, 0}</string>
@@ -168,6 +172,7 @@
 								</array>
 								<string key="NSFrame">{{1, 1}, {813, 468}}</string>
 								<reference key="NSSuperview" ref="85197859"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="340681439"/>
 								<string key="NSReuseIdentifierKey">_NS:78</string>
 								<reference key="NSDocView" ref="340681439"/>
@@ -179,6 +184,7 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{234, 1}, {15, 143}}</string>
 								<reference key="NSSuperview" ref="85197859"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="302484822"/>
 								<string key="NSReuseIdentifierKey">_NS:82</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -192,6 +198,7 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{1, 144}, {233, 15}}</string>
 								<reference key="NSSuperview" ref="85197859"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1046108904"/>
 								<string key="NSReuseIdentifierKey">_NS:91</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -203,6 +210,7 @@
 						</array>
 						<string key="NSFrameSize">{815, 470}</string>
 						<reference key="NSSuperview" ref="1005"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="616714804"/>
 						<string key="NSReuseIdentifierKey">_NS:76</string>
 						<int key="NSsFlags">133682</int>
@@ -216,6 +224,7 @@
 				</array>
 				<string key="NSFrameSize">{815, 470}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="85197859"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -245,6 +254,7 @@
 										</set>
 										<string key="NSFrame">{{51, 25}, {33, 28}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="659463006"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="NSEnabled">YES</bool>
@@ -265,6 +275,7 @@
 										<int key="NSvFlags">266</int>
 										<string key="NSFrame">{{89, 41}, {364, 16}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="668372605"/>
 										<string key="NSReuseIdentifierKey">_NS:1535</string>
 										<string key="NSHuggingPriority">{528, 633}</string>
@@ -300,6 +311,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{89, 17}, {105, 16}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="330351502"/>
 										<string key="NSReuseIdentifierKey">_NS:1535</string>
 										<bool key="NSEnabled">YES</bool>
@@ -327,6 +339,7 @@
 										<int key="NSvFlags">265</int>
 										<string key="NSFrame">{{473, 37}, {138, 20}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="150549121"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<string key="NSHuggingPriority">{250, 250}</string>
@@ -338,6 +351,7 @@
 										<int key="NSvFlags">265</int>
 										<string key="NSFrame">{{627, 35}, {111, 23}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="683223631"/>
 										<string key="NSReuseIdentifierKey">_NS:22</string>
 										<bool key="NSEnabled">YES</bool>
@@ -363,6 +377,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{210, 17}, {143, 16}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<string key="NSReuseIdentifierKey">_NS:1535</string>
 										<bool key="NSEnabled">YES</bool>
 										<object class="NSTextFieldCell" key="NSCell" id="818842284">
@@ -385,6 +400,7 @@
 										<int key="NSvFlags">265</int>
 										<string key="NSFrame">{{736, 35}, {26, 23}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="816109342"/>
 										<string key="NSReuseIdentifierKey">_NS:22</string>
 										<bool key="NSEnabled">YES</bool>
@@ -413,6 +429,7 @@
 										<int key="NSvFlags">265</int>
 										<string key="NSFrame">{{475, 14}, {201, 23}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="479259141"/>
 										<string key="NSReuseIdentifierKey">_NS:22</string>
 										<bool key="NSEnabled">YES</bool>
@@ -438,6 +455,7 @@
 										<int key="NSvFlags">268</int>
 										<string key="NSFrame">{{16, 23}, {23, 32}}</string>
 										<reference key="NSSuperview" ref="594286072"/>
+										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="460208382"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<bool key="NSEnabled">YES</bool>
@@ -465,14 +483,16 @@
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 									</object>
 								</array>
-								<string key="NSFrame">{{1, 1}, {790, 75}}</string>
+								<string key="NSFrame">{{1, 1}, {781, 75}}</string>
 								<reference key="NSSuperview" ref="548530321"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="120920563"/>
 								<string key="NSReuseIdentifierKey">_NS:11</string>
 							</object>
 						</array>
-						<string key="NSFrame">{{6, 8}, {792, 91}}</string>
+						<string key="NSFrame">{{6, 8}, {783, 91}}</string>
 						<reference key="NSSuperview" ref="413301639"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="594286072"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<string key="NSOffsets">{0, 0}</string>
@@ -506,8 +526,9 @@
 						<bool key="NSTransparent">NO</bool>
 					</object>
 				</array>
-				<string key="NSFrameSize">{815, 106}</string>
+				<string key="NSFrameSize">{797, 106}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="548530321"/>
 			</object>
 			<object class="NSArrayController" id="157025089">
@@ -1343,7 +1364,77 @@
 			<nil key="sourceID"/>
 			<int key="maxID">236</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">TasksView</string>
+					<string key="superclassName">NSViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="array_controller">NSArrayController</string>
+						<string key="check_for_delete">NSButton</string>
+						<string key="collection">NSCollectionView</string>
+						<string key="collection_view">NSView</string>
+						<string key="collection_view_box">NSBox</string>
+						<string key="leftTimeButton">NSButton</string>
+						<string key="nav_button">NSButton</string>
+						<string key="nav_image">NSImageCell</string>
+						<string key="nav_label">NSTextField</string>
+						<string key="task_menu">NSMenu</string>
+						<string key="task_more_button">NSButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="array_controller">
+							<string key="name">array_controller</string>
+							<string key="candidateClassName">NSArrayController</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="check_for_delete">
+							<string key="name">check_for_delete</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="collection">
+							<string key="name">collection</string>
+							<string key="candidateClassName">NSCollectionView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="collection_view">
+							<string key="name">collection_view</string>
+							<string key="candidateClassName">NSView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="collection_view_box">
+							<string key="name">collection_view_box</string>
+							<string key="candidateClassName">NSBox</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="leftTimeButton">
+							<string key="name">leftTimeButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nav_button">
+							<string key="name">nav_button</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nav_image">
+							<string key="name">nav_image</string>
+							<string key="candidateClassName">NSImageCell</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="nav_label">
+							<string key="name">nav_label</string>
+							<string key="candidateClassName">NSTextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="task_menu">
+							<string key="name">task_menu</string>
+							<string key="candidateClassName">NSMenu</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="task_more_button">
+							<string key="name">task_more_button</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TasksView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
